<resources>
    <string name="app_name">PhotoLoader</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_favourites_loaded_html">Favourites&lt;br/>total: &lt;b>%1$s&lt;/b></string>
    <string name="title_photos">Photos</string>
    <string name="title_photo_viewer">Photo Viewer</string>
    <string name="photo_signature">Photos by &lt;a href=\"%1$s\">%2$s&lt;/a> from &lt;a href=\"https://unsplash.com\">Unsplash&lt;/a></string>
    <string name="title_photos_loaded_html">Photos from &lt;a href=\"https://unsplash.com\">Unsplash&lt;/a>,&lt;br/>loaded: &lt;b>%1$s&lt;/b> from &lt;b>%2$s&lt;/b></string>
    <string name="title_info">Info</string>
    <string name="title_map">Map</string>

    <string name="desc_photo_thumb">Photo thumb</string>
    <string name="desc_photo_regular">Photo regular</string>

    <string name="error">Error</string>
    <string name="error_no_connection">No connection</string>

    <string name="creator_name">Alexander Marchenko</string>
    <string name="creator_about">Android developer</string>
    <string name="creator_email">remain4life@gmail.com</string>
    <string name="creator_button">Show on map</string>
    <string name="creator_dependencies_title">Used libs:</string>
    <string name="creator_dependencies" translatable="false">com.android.support:appcompat-v7:28.0.0
\ncom.android.support:cardview-v7:28.0.0
\ncom.android.support:design:28.0.0
\ncom.android.support:support-vector-drawable:28.0.0
\ncom.android.support.constraint:constraint-layout:1.1.3
\ncom.android.support:multidex:1.0.3
\ncom.squareup.retrofit2:retrofit:2.4.0
\ncom.squareup.retrofit2:converter-gson:2.4.0
\ncom.squareup.retrofit2:adapter-rxjava2:2.4.0
\nio.reactivex.rxjava2:rxjava:2.2.0
\nio.reactivex.rxjava2:rxandroid:2.0.2
\ncom.github.franmontiel:PersistentCookieJar:v1.0.1
\ncom.google.guava:guava:26.0-android
\ncom.android.support:multidex:1.0.3
\ncom.squareup.okhttp3:logging-interceptor:3.14.2
\ncom.squareup.picasso:picasso:2.71828
\ncom.android.support:support-v4:28.0.0
\nandroid.arch.persistence.room:runtime:1.1.1
\nannotationProcessor android.arch.persistence.room:compiler:1.1.1
\nandroid.arch.persistence.room:rxjava2:1.1.1
\ncom.yandex.android:mapkit:3.4.0
\ncom.yandex.android:transport:3.4.0
\ncom.google.android.gms:play-services-location:16.0.0
\ntest junit:junit:4.12
\nandroidTest com.android.support.test:runner:1.0.2
\nandroidTest com.android.support.test.espresso:espresso-core:3.0.2
     </string>
    <string name="back">Back</string>
    <string name="download_button">Download</string>
    <string name="download_title">Downloading: %1$s from unsplash.com</string>
    <string name="download_began">Downloading %1$s is started</string>
    <string name="download_completed">Downloading %1$s is completed</string>
    <string name="download_name_pattern" translatable="false">Picture_%1$s_%2$d.jpg</string>
    <string name="dialog_download_info">Picture was saved to</string>
    <string name="dialog_download_success">Successful download!</string>
    <string name="dialog_choose_photos_to_load">Set number of photos to load</string>
    <string name="no_write_permissions">No permissions to write file!</string>
    <string name="permissions_granted">Permissions granted, you can download pictures</string>
    <string name="map_creator_location">Developer\'s location</string>
    <string name="map_user_location">Your location</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_photos_number">Photos to load</string>
</resources>
