<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.InfoFragment">

    <data>
        <import
            type="android.text.method.ScrollingMovementMethod"/>
        <variable
            name="infoViewModel"
            type="org.remain4life.photoloader.viewmodels.InfoViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGray">

        <TextView
            android:id="@+id/nameTextView"
            style="@style/TitleTextView"
            android:layout_marginStart="@dimen/horizontal_half_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_half_margin"
            android:text="@string/creator_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/aboutTextView"
            style="@style/SmallTitleTextView"
            android:layout_marginStart="@dimen/horizontal_half_margin"
            android:layout_marginTop="@dimen/vertical_half_margin"
            android:layout_marginEnd="@dimen/horizontal_half_margin"
            android:text="@string/creator_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

        <TextView
            android:id="@+id/emailTextView"
            style="@style/SmallTitleTextView"
            android:layout_marginStart="@dimen/horizontal_half_margin"
            android:layout_marginTop="@dimen/vertical_half_margin"
            android:layout_marginEnd="@dimen/horizontal_half_margin"
            android:autoLink="email"
            android:text="@string/creator_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutTextView" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardContinue"
            style="@style/CardViewActionButton"
            android:layout_margin="@dimen/card_margin_big"
            android:onClick="@{() -> infoViewModel.onButtonClicked()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/card_margin_big"
                android:paddingRight="@dimen/card_margin_big"
                android:background="@drawable/btn_selector">

                <TextView
                    style="@style/CardTextView"
                    android:text="@string/creator_button" />

            </FrameLayout>



        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/dependenciesTitle"
            style="@style/SmallTitleTextView"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/creator_dependencies_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardContinue" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dependenciesTitle"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                style="@style/GreyTextView"
                android:maxLines="@{Integer.MAX_VALUE}"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:scrollbars="vertical"
                app:movementMethod="@{ScrollingMovementMethod.instance}"
                android:text="@string/creator_dependencies" />

        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>
</layout>